# HArDCore3D-release

./: .gitignore  CMakeLists-template.txt  CMakeLists.txt  Doxyfile  INSTALL_NOTES.txt  README.md  docs-MAINPAGE.md
CMake/: FindMKL.cmake  FindSCOTCH.cmake
ExternalLibraries/: CMakeLists.txt
Schemes/: CMakeLists.txt
Schemes/BoundaryConditions/: BChandlers.hpp  BoundaryConditions.cpp  BoundaryConditions.hpp
Schemes/DDR-magnetostatics/: README.txt  ddr-magnetostatics.cpp  ddr-magnetostatics.hpp  sddr-magnetostatics.cpp  sddr-magnetostatics.hpp
Schemes/DDR-navier-stokes/: README.txt  sddr-navier-stokes.cpp  sddr-navier-stokes.hpp
Schemes/DDR-stokes/: README.txt  ddr-stokes.cpp  ddr-stokes.hpp  sddr-stokes.cpp  sddr-stokes.hpp
Schemes/DDRCore/: l2projection.hpp  magnetostatics.cpp  magnetostatics.hpp
Schemes/HHO-MHD/: HHO_MHD.cpp  HHO_MHD.hpp  MHDTests.cpp  MHDTests.hpp  README.txt
Schemes/HHO-brinkman/: README.txt  hho-brinkman.cpp  hho-brinkman.hpp
Schemes/HHO-diff-advec-reac/: HHO_DiffAdvecReac.cpp  HHO_DiffAdvecReac.hpp
Schemes/HHO-diffusion/: HHO_Diffusion.cpp  HHO_Diffusion.hpp
Schemes/HHO-full-gradient-diff/: README.txt  hho-fullgradientdiff.cpp  hho-fullgradientdiff.hpp
Schemes/HHO-general/: HHO3D.cpp  HHO3D.hpp
Schemes/HHO-locvardiff/: HHO_LocVarDiff.cpp  HHO_LocVarDiff.hpp
Schemes/LADDR-yangmills/: README.txt  laddr-yangmills-lm.cpp  laddr-yangmills-lm.hpp  lasddr-yangmills.cpp  lasddr-yangmills.hpp
Schemes/MeshCoarsen/: DirectedGraph.cpp  DirectedGraph.hpp  MeshCoarsen.cpp  MeshToVTU.cpp
Schemes/TestCase/: BoundaryConditions.cpp  BoundaryConditions.hpp  TestCase.cpp  TestCase.hpp
Schemes/VEM-stokes/: README.txt  vem-stokes.cpp  vem-stokes.hpp
docs/: BoundaryConditions_8cpp.html  BoundaryConditions_8cpp_8o_8d.html  BoundaryConditions_8cpp__incl.map  BoundaryConditions_8cpp__incl.md5  BoundaryConditions_8hpp.html  BoundaryConditions_8hpp__dep__incl.map  BoundaryConditions_8hpp__dep__incl.md5  BoundaryConditions_8hpp__incl.map  BoundaryConditions_8hpp__incl.md5  BoundaryConditions_8hpp_source.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CheckMesh_8cpp.html  CheckMesh_8cpp_8o_8d.html  CheckMesh_8cpp__incl.map  CheckMesh_8cpp__incl.md5  DirectedGraph_8cpp.html  DirectedGraph_8cpp_8o_8d.html  DirectedGraph_8cpp__incl.map  DirectedGraph_8cpp__incl.md5  DirectedGraph_8hpp.html  DirectedGraph_8hpp__dep__incl.map  DirectedGraph_8hpp__dep__incl.md5  DirectedGraph_8hpp__incl.map  DirectedGraph_8hpp__incl.md5  DirectedGraph_8hpp_source.html  FlattenFaces_8cpp.html  FlattenFaces_8cpp_8o_8d.html  FlattenFaces_8cpp__incl.map  FlattenFaces_8cpp__incl.md5  GMpoly__cell_8cpp.html  GMpoly__cell_8cpp_8o_8d.html  GMpoly__cell_8cpp__incl.map  GMpoly__cell_8cpp__incl.md5  GMpoly__cell_8hpp.html  GMpoly__cell_8hpp__dep__incl.map  GMpoly__cell_8hpp__dep__incl.md5  GMpoly__cell_8hpp__incl.map  GMpoly__cell_8hpp__incl.md5  GMpoly__cell_8hpp_source.html  (+1832 more)
docs/latex/: BoundaryConditions_8cpp.tex  BoundaryConditions_8cpp_8o_8d.tex  BoundaryConditions_8cpp__incl.md5  BoundaryConditions_8hpp.tex  BoundaryConditions_8hpp__dep__incl.md5  BoundaryConditions_8hpp__incl.md5  CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  CheckMesh_8cpp.tex  CheckMesh_8cpp_8o_8d.tex  CheckMesh_8cpp__incl.md5  DirectedGraph_8cpp.tex  DirectedGraph_8cpp_8o_8d.tex  DirectedGraph_8cpp__incl.md5  DirectedGraph_8hpp.tex  DirectedGraph_8hpp__dep__incl.md5  DirectedGraph_8hpp__incl.md5  FlattenFaces_8cpp.tex  FlattenFaces_8cpp_8o_8d.tex  FlattenFaces_8cpp__incl.md5  GMpoly__cell_8cpp.tex  GMpoly__cell_8cpp_8o_8d.tex  GMpoly__cell_8cpp__incl.md5  GMpoly__cell_8hpp.tex  GMpoly__cell_8hpp__dep__incl.md5  GMpoly__cell_8hpp__incl.md5  GMpoly__edge_8cpp.tex  GMpoly__edge_8cpp_8o_8d.tex  GMpoly__edge_8cpp__incl.md5  GMpoly__edge_8hpp.tex  GMpoly__edge_8hpp__dep__incl.md5  GMpoly__edge_8hpp__incl.md5  GMpoly__face_8cpp.tex  GMpoly__face_8cpp_8o_8d.tex  GMpoly__face_8cpp__incl.md5  GMpoly__face_8hpp.tex  GMpoly__face_8hpp__dep__incl.md5  GMpoly__face_8hpp__incl.md5  HHO3D_8cpp.tex  HHO3D_8cpp_8o_8d.tex  (+814 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+129 more)
documentation/: MAINPAGE.md  tutorial_scheme.md
include/Manicore/: exterior.hpp  exterior_dimension.hpp  exterior_evaluation.hpp
include/Math/: math.hpp
include/Mesh/: Mesh2D.hpp  Mesh3D.hpp  MeshND.hpp  MeshObject.hpp
meshes/: RF_format_description.txt
runs/: directories-template.sh
runs/ddr-magnetostatics/: data.sh  runseries.sh
runs/ddr-stokes/: data.sh  runseries.sh
runs/hho-brinkman/: all-cavity-runs.sh  all-runseries.sh  create_fluxfiles.sh  data.sh  runseries.sh
runs/hho-diff-advec-reac/: data.sh  runseries.sh
runs/hho-diffusion/: compute_rates.cpp  compute_rates.f90  data.sh  runseries.sh
runs/hho-fullgradientdiff/: data.sh  runseries.sh
runs/hho-locvardiff/: data.sh  runseries.sh
runs/hho-mhd/: compute_rates.cpp  data.sh  runseries.sh
src/Manicore_linear/: CMakeLists.txt  ddr_pec.cpp  ddr_pec.hpp  ddr_spaces.cpp  ddr_spaces.hpp  exterior_cell.cpp  exterior_cell.hpp
src/Mesh/: CMakeLists.txt  cell.cpp  cell.hpp  edge.cpp  edge.hpp  face.cpp  face.hpp  mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp  mesh_reader.cpp  mesh_reader.hpp  vertex.cpp  vertex.hpp
src/Mesh/StemMesh/: LICENCE.txt  builder.hh  mesh3D.hh  mesh3D_GMV_output.hh  mesh3D_format_readers.hh  mesh3D_greader.hh  mesh3D_master.hh  mesh3D_writer.hh  printer.hh  quad_regn.hh  tetgen.h
src/Mesh/Transforms/: CheckMesh.cpp  DirectedGraph.cpp  DirectedGraph.hpp  FlattenFaces.cpp  MSHToRF.cpp  MakeFlatFaces.cpp  MeshCoarsen.cpp  MeshToVTU.cpp  MoveVertices.cpp  RFToFVCA10format.cpp  RFToVTU.cpp
(+394 files in other folders)
